fixed section texts on complex multi select in dark mode

--- a/cardDatabase/static/css/darkmode/dark_mode_overrides.css
+++ b/cardDatabase/static/css/darkmode/dark_mode_overrides.css
@@ -262,3 +262,7 @@ select{
 .dropdown-content li:hover, .dropdown-content li.active {
     background-color: #351543;
 }
+
+.select-dropdown li.optgroup span{
+    color:white;
+}
